--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -15,7 +15,7 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "干爆陈相睿",
+  "eat-kano": "踩爆李晓飞",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
   "game-title": "干爆陈相睿",
@@ -30,20 +30,20 @@
   "again": "重来",
   "home": "主页",
   "rank": "排行",
-  "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
-  "text-level-5": "人?",
+  "repo": "开源代码",
+  "text-level-1": "你太逊了",
+  "text-level-2": "狗都比你强",
+  "text-level-3": "还可以吧，反正也是一般般",
+  "text-level-4": "我艹666啊",
+  "text-level-5": "你单身30年了吗？",
   "time-over": "倒计时多了",
-  "rank-title": "干爆陈相睿-排行榜",
+  "rank-title": "踩爆李晓飞-排行榜",
   "query-record": "查询记录",
   "day-rank": "排行榜[日]",
   "week-rank": "排行榜[周]",
   "month-rank": "排行榜[月]",
   "all-rank": "排行榜[总]",
-  "navbar-brand": "干爆陈相睿-排行榜",
+  "navbar-brand": "踩爆李晓飞-排行榜",
   "daily-ranking": "日榜",
   "weekly-ranking": "周榜",
   "monthly-ranking": "月榜",
@@ -52,7 +52,7 @@
   "query-input": "要查询的名字",
   "search-btn": "查询",
   "no-data": "现在还没有数据",
-  "no-message": "这个人很懒什么也没留下",
+  "no-message": "李晓飞的专属游戏",
   "self-record": "{name} 的最高记录. 已上传 {attempts} 次<br/>SCORE:{score} {time}",
   "no-self-record": "没有找到 {name} 的记录(或被过滤)",
   "no-name-tip": "提示：你玩之前还没有填名字"
