--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -18,7 +18,7 @@
   "eat-kano": "踩爆李晓飞",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "踩爆李晓飞",
+  "game-title": "《踩爆李晓飞》",
   "game-intro1": "从最底下的开始",
   "game-intro2": "看你能得多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
